--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,7 @@
 [LocalizedFileNames]
 Captura de pantalla 2025-04-28 231727.png=@Captura de pantalla 2025-04-28 231727.png,0
+Captura de pantalla 2025-05-01 004833.png=@Captura de pantalla 2025-05-01 004833.png,0
+Captura de pantalla 2025-05-01 005412.png=@Captura de pantalla 2025-05-01 005412.png,0
+Captura de pantalla 2025-05-01 005513.png=@Captura de pantalla 2025-05-01 005513.png,0
+Captura de pantalla 2025-05-01 012834.png=@Captura de pantalla 2025-05-01 012834.png,0
+Captura de pantalla 2025-05-01 012941.png=@Captura de pantalla 2025-05-01 012941.png,0
